horizontal scroll issue fixed

--- a/css/components/_fullscreen-menu.scss
+++ b/css/components/_fullscreen-menu.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 100%;
   width: 100%;
