--- a/css/main.css
+++ b/css/main.css
@@ -801,7 +801,7 @@ img {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 100%;
       width: 100%;
